# CFPiHole

./: cloudflare.py  cloudflare_api.py  cloudflare_config.py  config.ini  logger_config.py  main.py  pyproject.toml  requirements.txt  tld.py  tldlist.txt  whitelist.txt
.github/: dependabot.yml
.github/workflows/: bandit.yml  codeql.yml  updateCF.yml
